--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   fluttertoast: ^8.2.1
   path_provider: ^2.0.5
   http: ^0.13.5
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
